# ComfyUI-MotionCapture

./: __init__.py  install.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
lib/: retargeting_configs.py
nodes/: bvh_retarget_node.py  fbx_animation_viewer_node.py  fbx_loader_node.py  fbx_preview_node.py  inference_node.py  load_smpl_node.py  loader_node.py  retarget_node.py  save_smpl_node.py  smpl_to_bvh_node.py  viewer_node.py
web/: fbx_animation_viewer.js  fbx_preview.js  file_list_updater.js
web/css/: smpl_viewer.css
web/js/: smpl_viewer.js
workflows/: GVHMR_inference.json  fbx+npz=anim.json  inference.json
